# nreal_nativesdk_hello_gl2

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gl_code.cpp  glm.h
app/src/main/cpp/nreal/: NRDevice.h  NRealManager.h  NativeGlassesController.h  NativeHMD.h  NativeHeadTracking.h  NativeRendering.h  NativeTracking.h  types.h
app/src/main/java/com/android/gl2jni/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
gradle/wrapper/: gradle-wrapper.properties
